; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_ntstat.c_nstat_udp_gone.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_ntstat.c_nstat_udp_gone.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nstat_tucookie = type { %struct.inpcb* }
%struct.inpcb = type { i64 }

@INPCB_STATE_DEAD = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64)* @nstat_udp_gone to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nstat_udp_gone(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.nstat_tucookie*, align 8
  %4 = alloca %struct.inpcb*, align 8
  store i64 %0, i64* %2, align 8
  %5 = load i64, i64* %2, align 8
  %6 = inttoptr i64 %5 to %struct.nstat_tucookie*
  store %struct.nstat_tucookie* %6, %struct.nstat_tucookie** %3, align 8
  %7 = load %struct.nstat_tucookie*, %struct.nstat_tucookie** %3, align 8
  %8 = getelementptr inbounds %struct.nstat_tucookie, %struct.nstat_tucookie* %7, i32 0, i32 0
  %9 = load %struct.inpcb*, %struct.inpcb** %8, align 8
  store %struct.inpcb* %9, %struct.inpcb** %4, align 8
  %10 = icmp ne %struct.inpcb* %9, null
  br i1 %10, label %11, label %17

11:                                               ; preds = %1
  %12 = load %struct.inpcb*, %struct.inpcb** %4, align 8
  %13 = getelementptr inbounds %struct.inpcb, %struct.inpcb* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @INPCB_STATE_DEAD, align 8
  %16 = icmp eq i64 %14, %15
  br label %17

17:                                               ; preds = %11, %1
  %18 = phi i1 [ true, %1 ], [ %16, %11 ]
  %19 = zext i1 %18 to i64
  %20 = select i1 %18, i32 1, i32 0
  ret i32 %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
